--- a/build.gradle
+++ b/build.gradle
@@ -8,5 +8,6 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.guava:guava:19.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
