--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ group 'edu.rosehulman.gcc'
 version '0.0.0'
 
 apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = 'edu.rosehulman.gcc.Main'
 
 repositories {
     mavenCentral()
@@ -10,4 +13,16 @@ repositories {
 dependencies {
     compile 'com.google.guava:guava:19.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': "$mainClassName"
+    }
+
+    from {
+        configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
 }
