--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 
 dependencies {
     compile 'com.google.guava:guava:19.0'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'de.jflex:jflex:1.6.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
