--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: java
 jdk:
   - oraclejdk8
+notifications:
+  email:
+    on_success: change
+    on_failure: change
+    on_pull_requests: false
