--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
 jacocoTestReport {
     reports {
         xml.enabled = true
