--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ repositories {
 dependencies {
     compile 'com.google.guava:guava:19.0'
     compile 'com.github.vbmacher:java-cup-runtime:11b'
+    compile 'io.airlift:airline:0.7'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
