--- a/codecov.yml
+++ b/codecov.yml
@@ -2,6 +2,6 @@ comment:
   layout: header, changes, diff
 coverage:
   ignore:
-  - src/main/java/edu/rosehulman/minijavac/cli/*.java
+  - src/main/java/edu/rosehulman/minijavac/cli/.*
   status:
     patch: false
